MySQLConnection string in web.config geplaatst voor centralisatie

--- a/ShareWithUs/Web.config
+++ b/ShareWithUs/Web.config
@@ -42,4 +42,26 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data>
+  <connectionStrings>
+    <!--patrick-->
+      <add name="MySQLConn" connectionString="Data Source=localhost;port=3306;Initial Catalog=sharewithus;User Id=root;password=admin"/>
+    <!--Janine-->
+    <!--<add name="MySQLConnection"
+         connectionString="Server=localhost; user id=root; password=myrootpass; persist security info=True; database=sharewithus"
+         providerName="System.Data.SqlClient" />-->
+    <!--Sam-->
+    <!--<add name="MySQLConnection"
+         connectionString="Server=localhost; user id=root; password=myrootpass; persist security info=True; database=sharewithus"
+         providerName="System.Data.SqlClient" />-->
+    <!--Wouter-->
+    <!--<add name="MySQLConnection"
+         connectionString="Server=localhost; user id=????; password=????; persist security info=True; database=sharewithus"
+         providerName="System.Data.SqlClient" />-->
+    <!--Tanja-->
+    <!--<add name="MySQLConnection"
+         connectionString="Server=localhost; user id=????; password=????; persist security info=True; database=sharewithus"
+         providerName="System.Data.SqlClient" />-->
+    
+  </connectionStrings>
+</configuration>
